<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:ignore="MissingPrefix"
    tools:context="it.antedesk.bakingapp.fragment.StepDetailsFragment">
    <RelativeLayout
        android:id="@+id/details_container_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/main_media_frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_height"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:background="@android:color/black">
            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/step_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/bakery_no_media"
                android:visibility="invisible"
                android:contentDescription="@string/step_image" />
        </FrameLayout>
        <TextView
            android:id="@+id/step_title"
            style="@style/TitleTextView"
            android:textAlignment="center"
            android:layout_margin="@dimen/layout_margin_10dp"
            android:layout_below="@+id/main_media_frame"/>
        <View
            android:id="@+id/separator1_view"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line_separator_height"
            android:layout_centerVertical="true"
            android:background="@color/heavenly"
            android:layout_margin="@dimen/layout_margin_10dp"
            android:layout_below="@+id/step_title" />
        <TextView
            android:id="@+id/step_description_tv"
            style="@style/BaseTextView"
            android:layout_margin="@dimen/layout_margin_10dp"
            android:layout_below="@+id/separator1_view"/>

    </RelativeLayout>
</ScrollView>