<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredient_list"
    android:name="it.antedesk.bakingapp.fragment.IngredientFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@color/light_gray"
    app:layoutManager="LinearLayoutManager"
    tools:context="it.antedesk.bakingapp.fragment.IngredientFragment"
    tools:listitem="@layout/fragment_ingredient_item" />
