<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="it.antedesk.bakingapp.HomeActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipes_rv"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <!-- For error purpose. By default, this layout is invisible -->
    <LinearLayout
        android:id="@+id/connection_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/error_background"
        android:visibility="invisible">
        <ImageView
            android:layout_width="@dimen/connection_error_iv"
            android:layout_height="@dimen/connection_error_iv"
            android:layout_margin="@dimen/margin_5dp"
            android:layout_gravity="center"
            android:src="@drawable/bakery_no_media"
            android:contentDescription="@string/error_image_content_description"/>
        <TextView
            style="@style/BaseTextView"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_5dp"
            android:text="@string/detail_error_message"
            android:textAlignment="center"/>
    </LinearLayout>
</RelativeLayout>
